# ross-gemma4

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.migration/: original-head.txt  pre-rewrite-log.txt
android/: README.md  build.gradle.kts  settings.gradle.kts
artifacts/: test_gemma.swift
backend/: .env.example  package-lock.json  package.json
docs/: ANDROID_REAL_INFERENCE_QA.md  APP_STORE_BILLING_NOTES.md  ARTICLE_MAKING_GEMMA4_WORK_ON_IOS.md  ARTICLE_USING_GEMMA4_IN_ROSS.md  AUTH_QA.md  DEMO_SCRIPT.md  DEVICE_INSTALL_QA.md  EXTRACTION_EVALUATION.md  GEMMA4_ARCHITECTURE.md  HACKATHON_WRITEUP.md  INTERNAL_ALPHA_QA.md  INTERNAL_ALPHA_READINESS.md  IOS_REAL_DEVICE_CI.md  IOS_RUNTIME.md  LAWYER_USABILITY_ALPHA.md  LEGAL_EXTRACTION_PIPELINE.md  LEGAL_POSITIONING_NOTES.md  LLM_DOWNLOAD_AND_ACTION_ROUTING.md  LOCAL_MODEL_RUNTIME.md  MANUAL_CASE_ASSOCIATE_E2E.md  MANUAL_LOCAL_INFERENCE_QA.md  MODEL_ARTIFACT_STATUS.md  MODEL_ARTIFACT_STRATEGY.md  MODEL_DOWNLOADS.md  MODEL_REGISTRY.md  NEXT_STEP_REPORT.md  OFFLINE_BEHAVIOR.md  PRIVACY_ARCHITECTURE.md  PRIVATE_ASSISTANT_USAGE.md  PRODUCT_OVERVIEW.md  PRODUCT_PROOF_QA.md  PUBLIC_LAW_LOCAL_QUERY_FLOW.md  PUBLIC_LAW_QA.md  PUBLIC_LAW_SANITIZATION_RULES.md  (+12 more)
private-digital-clerk/core/rust/: Cargo.toml
private-digital-clerk/core/rust/src/: lib.rs  models.rs  redaction.rs
private-digital-clerk/core/rust/tests/: chunking_tests.rs  entitlement_tests.rs  feature_gating_tests.rs  public_query_tests.rs  rag_tests.rs  redaction_tests.rs
(+755 files in other folders)
