[package]
name = "private_digital_clerk_core"
version = "0.1.0"
edition = "2021"
description = "Privacy-first local core primitives for Private Digital Clerk"
license = "UNLICENSED"
publish = false

[dependencies]
base64 = "0.22"
ed25519-dalek = "=1.0.1"
hex = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
